# pyrobot

./: .gitignore  .gitmodules  install_pyrobot.sh  locobot_install_all.sh
.circleci/: config.yml
INSTALL_DIR/pyenv_pyrobot_python2/: pip-selfcheck.json
INSTALL_DIR/pyenv_pyrobot_python2/local/: bin  include  lib
robots/LoCoBot/install/: locobot_install_all.sh
robots/LoCoBot/locobot_navigation/orb_slam2_ros/: CMakeLists.txt
robots/LoCoBotBase/: Refine_Memo.md
robots/LoCoBotBase/locobotbase_calibration/: CMakeLists.txt  package.xml  setup.py
robots/LoCoBotBase/locobotbase_calibration/launch/: calibration_publish.launch
robots/LoCoBotBase/locobotbase_calibration/nodes/: calibration_publish_transforms.py
robots/LoCoBotBase/locobotbase_control/: CMakeLists.txt  package.xml  setup.py
robots/LoCoBotBase/locobotbase_control/config/: dynamixels_teleop.yaml  dynamixels_tuned.yaml  teleop.yaml
robots/LoCoBotBase/locobotbase_control/include/locobotbase_control/: locobotbase_controller.h
robots/LoCoBotBase/locobotbase_control/launch/: dynamixel_controllers.launch  main.launch  position_control_arm.launch
robots/LoCoBotBase/locobotbase_control/nodes/: keyboard_teleop_client.py  robot_teleop_server.py
robots/LoCoBotBase/locobotbase_control/scripts/locobotbase_control/: teleoperation.py
robots/LoCoBotBase/locobotbase_control/src/: locobotbase_controller.cpp
robots/LoCoBotBase/locobotbase_description/: CMakeLists.txt  package.xml  urdf.rviz
robots/LoCoBotBase/locobotbase_description/launch/: display.launch  gazebo.launch
robots/LoCoBotBase/locobotbase_description/urdf/: locobotbase_description.urdf
robots/LoCoBotBase/locobotbase_gazebo/: CMakeLists.txt  package.xml  setup.py
robots/LoCoBotBase/locobotbase_gazebo/config/: control.yaml
robots/LoCoBotBase/locobotbase_gazebo/include/locobotbase_gazebo/: gazebo_locobotbase_control.h
robots/LoCoBotBase/locobotbase_gazebo/launch/: gazebo_locobotbase.launch  gazebo_locobotbase_control.launch  gazebo_moveit_main.launch
robots/LoCoBotBase/locobotbase_gazebo/scripts/: reset_sim_example.py
robots/LoCoBotBase/locobotbase_gazebo/src/: gazebo_locobotbase_control.cpp
robots/LoCoBotBase/locobotbase_navigation/locobotbase_navigation/: CMakeLists.txt  package.xml  setup.py
robots/LoCoBotBase/locobotbase_navigation/locobotbase_navigation/launch/: main_base.launch  move_base.launch  turtlebot_move_base.launch
robots/TurtleBot2/: README.md  Refine_Memo.md
robots/TurtleBot2/install/: turtlebot2_install_all.sh
robots/TurtleBot2/turtlebot2_calibration/: CMakeLists.txt  package.xml  setup.py
robots/TurtleBot2/turtlebot2_calibration/launch/: calibration_publish.launch
robots/TurtleBot2/turtlebot2_calibration/nodes/: calibration_publish_transforms.py
robots/TurtleBot2/turtlebot2_control/: CMakeLists.txt  package.xml  setup.py
robots/TurtleBot2/turtlebot2_control/config/: teleop.yaml
robots/TurtleBot2/turtlebot2_control/launch/: change_id.launch  joystick_teleop.launch  main.launch
robots/TurtleBot2/turtlebot2_description/: CMakeLists.txt  package.xml  urdf.rviz
robots/TurtleBot2/turtlebot2_description/launch/: display.launch  gazebo.launch
robots/TurtleBot2/turtlebot2_description/robots/: kobuki_hexagons_astra.urdf.xacro  kobuki_hexagons_asus_xtion_pro.urdf.xacro  kobuki_hexagons_asus_xtion_pro_offset.urdf.xacro  kobuki_hexagons_kinect.urdf.xacro  kobuki_hexagons_r200.urdf.xacro  kobuki_myrobot2_d455_vlp16.urdf.xacro  kobuki_myrobot_d435_zed.urdf.xacro  kobuki_myrobot_d455_d455_vlp16.urdf.xacro  roomba_circles_asus_xtion_pro.urdf.xacro  roomba_circles_kinect.urdf.xacro
robots/TurtleBot2/turtlebot2_description/urdf/sensors/: d435.urdf.xacro  d455.gazebo.xacro  d455.urdf.xacro  imu.xacro  zed.gazebo.xacro  zed.urdf.xacro  zed2.gazebo.xacro  zedm.gazebo.xacro
robots/TurtleBot2/turtlebot2_description/urdf/stacks/: myrobot.urdf.xacro  myrobot2.urdf.xacro
robots/TurtleBot2/turtlebot2_gazebo/: CMakeLists.txt  package.xml  setup.py
robots/TurtleBot2/turtlebot2_gazebo/launch/: empty_world.launch  gazebo_main.launch  gazebo_myrobot.launch  gazebo_myrobot2.launch  gazebo_turtlebot2.launch  gazebo_turtlebot2_control.launch  gazebo_world_launcher.launch
robots/TurtleBot2/turtlebot2_gazebo/scripts/: reset_sim_example.py
robots/TurtleBot2/turtlebot2_gazebo/worlds/: actor.world  mcity.world  simple_city.world
robots/TurtleBot2/turtlebot2_navigation/turtlebot2_navigation/: CMakeLists.txt  package.xml  setup.py
robots/TurtleBot2/turtlebot2_navigation/turtlebot2_navigation/config/turtlebot2/: local_costmap_params.yaml
robots/TurtleBot2/turtlebot2_navigation/turtlebot2_navigation/launch/: hdl_graph_slam_imu.launch  hdl_localization_imu.launch  main_base.launch  move_base.launch  rtabmap_mapping_demo.launch  turtlebot2_move_base.launch
robots/TurtleBot2/turtlebot2_navigation/turtlebot2_navigation/maps/: rtab_playground.pgm  rtab_playground.yaml
robots/TurtleBot2/turtlebot2_navigation/turtlebot2_navigation/nodes/: mapToGrid.py
robots/TurtleBot2/turtlebot2_perception/: CMakeLists.txt  package.xml
robots/TurtleBot2/turtlebot2_rviz/: CMakeLists.txt  package.xml
robots/TurtleBot2/turtlebot2_rviz/launch/: view_navigation.launch  view_navigation_app.launch
robots/TurtleBot2/turtlebot2_rviz/rviz/: myrobot_navigation.rviz  turtlebot2_base_navigation.rviz
src/pyrobot/cfg/: locobot_config.py  locobotbase_config.py  turtlebot2_config.py
src/pyrobot/turtlebot2/: base.py  camera.py
(+2 files in other folders)
