<package>
  <name>turtlebot2_description</name>
  <version>0.0.1</version>
  <description>
    <p>URDF Description package for turtlebot2_description</p>
    <p>This package contains configuration data, 3D models and launch files
for turtlebot2_description robot</p>
  </description>
  <author>Dhiraj Gandhi</author>
  <maintainer email="g.prakashchand@gmail.com" />
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>kobuki_description</run_depend>
  <run_depend>create_description</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>
